# cppbackend

./: .gitignore
sprint1/problems/async_server/solution/src/: http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile.txt
sprint1/problems/final_task/solution/src/: http_server.cpp  json_loader.cpp  main.cpp  request_handler.cpp
sprint1/problems/map_json/solution/src/: http_server.h  json_loader.cpp  main.cpp  request_handler.h
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt  tcp_client.cpp
sprint2/problems/command_line/solution/src/: http_server.cpp  json_loader.cpp  main.cpp  model.cpp  model.h  request_handler.h
sprint2/problems/game_state/solution/src/: model.cpp  model.h  request_handler.h
sprint2/problems/join_game/solution/src/: main.cpp  model.cpp  model.h  request_handler.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/src/: json_loader.cpp  json_loader.h  logging.h  model.h  request_handler.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint2/problems/server_logging/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  request_handler.h
sprint2/problems/static_content/solution/src/: main.cpp  request_handler.h
sprint2/problems/time_control/solution/src/: model.cpp  model.h  request_handler.h
sprint3/problems/ammo/solution/: ammo.txt  load.yaml  load_stress.yaml
sprint3/problems/find_return/solution/src/: json_loader.cpp  model.cpp  model.h  request_handler.h
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/flamegraph/solution/src/: http_server.cpp  request_handler.h
sprint3/problems/gather-tests/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint3/problems/gather-tests/solution/src/: collision-detector-tests.cpp  collision_detector.cpp  collision_detector.h  geom.h
sprint3/problems/gather-tests/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gather/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gather/solution/src/: collision_detector.cpp  json_loader.cpp
sprint3/problems/gather/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile  extra_data.h  json_loader.cpp  main.cpp  model.cpp  model.h  request_handler.h
sprint3/problems/gen_objects/solution/src/: extra_data.h  geom.h  json_loader.cpp  json_loader.h  loot_generator.cpp  loot_generator.h  loot_generator_tests.cpp  main.cpp  map_loot_types.h  model.cpp  model.h  model_tests.cpp  request_handler.h  ticker.h
sprint3/problems/instrumentation/precode/: report
sprint3/problems/instrumentation/precode/v0/: events2dot  gmon.out
sprint3/problems/instrumentation/precode/v1/: events2dot  gmon.out
sprint3/problems/instrumentation/precode/v2/: gmon.out
sprint3/problems/instrumentation/solution/: event2dot  events2dot  gmon.out
sprint3/problems/scores/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/scores/solution/src/: http_server.h  json_loader.cpp  json_loader.h  logging.h  loot_generator.h  main.cpp  model.cpp  model.h  tagged.h
sprint3/problems/static_lib/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/tv/precode/src/: controller.h  tv.h
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/src/app/: use_cases.h  use_cases_impl.cpp  use_cases_impl.h
sprint4/problems/bookypedia-1/solution/src/domain/: author.h  book.h
sprint4/problems/bookypedia-1/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/bookypedia-1/solution/src/ui/: view.cpp  view.h
sprint4/problems/bookypedia-1/solution/tests/: use_case_tests.cpp
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/src/: bookypedia.cpp  bookypedia.h
sprint4/problems/bookypedia-2/solution/src/app/: use_cases.cpp  use_cases.h  use_cases_impl.cpp  use_cases_impl.h
sprint4/problems/bookypedia-2/solution/src/domain/: author.h  book.h  book_fwd.h
sprint4/problems/bookypedia-2/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/bookypedia-2/solution/src/ui/: view.cpp  view.h
sprint4/problems/bookypedia-2/solution/tests/: use_case_tests.cpp
sprint4/problems/db_of_books/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/: CMakeLists.txt  build.sh  conanfile.txt  database.cpp  json_parser.cpp  json_parser.h  main.cpp  run.sh
sprint4/problems/db_of_books/solution/solution/: main.cpp
sprint4/problems/db_of_books/solution/src/: database.cpp  database.h  json_parser.cpp  json_parser.h  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/leave_game/solution/src/: database_manager.cpp  database_manager.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  model_serialization.h  request_handler.h
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile  conanfile.txt
sprint4/problems/state_serialization/solution/src/: main.cpp  model.cpp  model.h  model_serialization.h  request_handler.h  state_saver.h
